--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="row">
         <div id="poke-ball" class="col">
-          
+          <h1>Pokédex</h1>
         </div>
       </div>
     </div>
